// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup Center aligment should render with center alignment styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.circuit-0>button,
.circuit-0>a {
  width: 100%;
}

.circuit-0>button:not(:last-child),
.circuit-0>a:not(:last-child) {
  margin-bottom: 16px;
}

@media (min-width: 480px) {
  .circuit-0 {
    -webkit-box-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }

  .circuit-0>button,
  .circuit-0>a {
    width: auto;
  }

  .circuit-0>button:not(:last-child),
  .circuit-0>a:not(:last-child) {
    margin-right: 16px;
    margin-bottom: 0;
  }
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-1:active,
.circuit-1[aria-expanded='true'],
.circuit-1[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-2 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-5 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-5:active,
.circuit-5[aria-expanded='true'],
.circuit-5[aria-pressed='true'] {
  background-color: #1A368E;
  border-color: #1A368E;
}

<div
  class="circuit-0"
>
  <button
    class="circuit-1"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      Cancel
    </span>
  </button>
  <button
    class="circuit-5"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      Confirm
    </span>
  </button>
</div>
`;

exports[`ButtonGroup Left aligment should render with left alignment styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.circuit-0>button,
.circuit-0>a {
  width: 100%;
}

.circuit-0>button:not(:last-child),
.circuit-0>a:not(:last-child) {
  margin-bottom: 16px;
}

@media (min-width: 480px) {
  .circuit-0 {
    -webkit-box-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }

  .circuit-0>button,
  .circuit-0>a {
    width: auto;
  }

  .circuit-0>button:not(:last-child),
  .circuit-0>a:not(:last-child) {
    margin-right: 16px;
    margin-bottom: 0;
  }
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-1:active,
.circuit-1[aria-expanded='true'],
.circuit-1[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-2 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-5 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-5:active,
.circuit-5[aria-expanded='true'],
.circuit-5[aria-pressed='true'] {
  background-color: #1A368E;
  border-color: #1A368E;
}

<div
  class="circuit-0"
>
  <button
    class="circuit-1"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      Cancel
    </span>
  </button>
  <button
    class="circuit-5"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      Confirm
    </span>
  </button>
</div>
`;

exports[`ButtonGroup should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.circuit-0>button,
.circuit-0>a {
  width: 100%;
}

.circuit-0>button:not(:last-child),
.circuit-0>a:not(:last-child) {
  margin-bottom: 16px;
}

@media (min-width: 480px) {
  .circuit-0 {
    -webkit-box-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }

  .circuit-0>button,
  .circuit-0>a {
    width: auto;
  }

  .circuit-0>button:not(:last-child),
  .circuit-0>a:not(:last-child) {
    margin-right: 16px;
    margin-bottom: 0;
  }
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-1:active,
.circuit-1[aria-expanded='true'],
.circuit-1[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-2 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-5 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-5:active,
.circuit-5[aria-expanded='true'],
.circuit-5[aria-pressed='true'] {
  background-color: #1A368E;
  border-color: #1A368E;
}

<div
  class="circuit-0"
>
  <button
    class="circuit-1"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      Cancel
    </span>
  </button>
  <button
    class="circuit-5"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      Confirm
    </span>
  </button>
</div>
`;

exports[`ButtonGroup should render with the actions prop 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

@media (min-width: 480px) {
  .circuit-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

.circuit-1 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  margin-right: 16px;
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-1:active,
.circuit-1[aria-expanded='true'],
.circuit-1[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

@media (max-width: 479px) {
  .circuit-1 {
    display: none;
  }
}

.circuit-2 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-5 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-5:active,
.circuit-5[aria-expanded='true'],
.circuit-5[aria-pressed='true'] {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-9 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  padding: calc(12px - 1px) calc(24px - 1px);
  background-color: transparent;
  border-color: transparent;
  color: #3063E9;
  padding-left: 0;
  padding-right: 0;
  position: relative;
  overflow: hidden;
  margin-top: 16px;
}

.circuit-9:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-9:focus::-moz-focus-inner {
  border: 0;
}

.circuit-9:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-9:disabled,
.circuit-9[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-9:hover {
  color: #234BC3;
}

.circuit-9:active,
.circuit-9[aria-expanded='true'],
.circuit-9[aria-pressed='true'] {
  color: #1A368E;
}

@media (min-width: 480px) {
  .circuit-9 {
    display: none;
  }
}

<div
  class="circuit-0"
>
  <a
    class="circuit-1"
    href="https://sumup.com"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      Go elsewhere
    </span>
  </a>
  <button
    class="circuit-5"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      Look again
    </span>
  </button>
  <a
    class="circuit-9"
    href="https://sumup.com"
  >
    <span
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="circuit-4"
    >
      Go elsewhere
    </span>
  </a>
</div>
`;
